# quartz

./: Cargo.toml  README.md
.github/: copilot-instructions.md
crates/quartz-core/: Cargo.toml
crates/quartz-core/src/: asset.rs  dimension.rs  lib.rs  universe.rs
crates/quartz-portfolio/: Cargo.toml
crates/quartz-portfolio/examples/: markowitz.rs  multi_dimension.rs
crates/quartz-portfolio/src/: compiler.rs  lib.rs  model.rs  restriction.rs  solution.rs  strategy.rs  tactic.rs
crates/quartz-portfolio/src/constraints/: allocation.rs  bounds.rs  exclusion.rs  mod.rs  scoring.rs  turnover.rs
crates/quartz-solver/: Cargo.toml
crates/quartz-solver/src/: lib.rs
